force-app/main/default/objects/SOI_Roles__c/SOI_Roles__c.object-meta.xml
<CustomObject>
    <label>Volunteer_Role</label>
    <nameField>
        <label>Volunteer_Roles Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer_Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>