force-app/main/default/objects/SOI_Roles__c/fields/SOI_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>SOI_Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOI_Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer_Roles</relationshipLabel>
    <relationshipName>Volunteer_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>