force-app/main/default/objects/SOI_Roles__c/fields/VJAJobImpID__c.field-meta.xml
<CustomField>
    <fullName>VJAJobImpID__c</fullName>
    <label>VJAJobImpID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>